Fix flex overflow; make headings less massive on mobile

--- a/layouts/styles/tags.css
+++ b/layouts/styles/tags.css
@@ -2,6 +2,7 @@ section#tags ul {
     margin: 0;
     list-style: none;
     display: inline-flex;
+    flex-wrap: wrap;
     padding: 0;
 }
 
